--- a/TaskManager/Shared/NavMenu.razor
+++ b/TaskManager/Shared/NavMenu.razor
@@ -10,7 +10,7 @@
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="manageTask">
+            <NavLink class="nav-link" href="/">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Manage Task
             </NavLink>
         </div>
