--- a/TaskManager/Pages/AddTaskPage.razor
+++ b/TaskManager/Pages/AddTaskPage.razor
@@ -1,9 +1,13 @@
 @page "/addTask"
 @inject NavigationManager NavigationManager
-<h1>Add New Task</h1>
-<input type="text" @bind="taskTitle">
 
-<button @onclick="NavigateToManageTask" class="btn btn-primary">Add Task</button>
+<div class="border text-center">
+    <div class="bg-info display-6 mb-5">Add New Task</div>
+    <input type="text block" @bind="taskTitle" placeholder="Enter new Task">
+    <br>
+
+    <div @onclick="NavigateToManageTask" class="btn btn-primary m-3">Add Task</div>
+</div>
     
 @code{
     private string? taskTitle;
