added a class to manage the add, update and delete operations
changed the enum to a class to provide consistency and manage the add, delete and update operations

--- a/TaskManager/Pages/AddTaskPage.razor
+++ b/TaskManager/Pages/AddTaskPage.razor
@@ -15,6 +15,6 @@
     private string? taskTitle;
     private DateOnly? dateOnly;
     public void NavigateToManageTask(){
-        NavigationManager.NavigateTo("/manageTask/add/" + taskTitle + "/" + dateOnly);
+        NavigationManager.NavigateTo("/manageTask/" + Operations.ADD + "/" + taskTitle + "/" + dateOnly);
     }
 }
