changed from NavigationManager.NavigateTo("/"); to NavigationManager.NavigateTo("/manageTask"); in the ManageTask.razor file

--- a/TaskManager/Pages/ManageTask.razor
+++ b/TaskManager/Pages/ManageTask.razor
@@ -87,7 +87,7 @@
         NavigationManager.NavigateTo("/addTask");
     }
     private void NavigateToManageTaskPage(){
-        NavigationManager.NavigateTo("/");
+        NavigationManager.NavigateTo("/manageTask");
     }
 
     private static int idCounter = 0;
